:sparkles: Added Physics JS + tree

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <style>
       body { margin: 0; display: flex; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: black; }
       #renderView { position: relative; margin: 0 auto; width: 690px; height: 690px; border: 3px solid rgba(41,61,174, .5); border-radius: 5px; display: flex; justify-content: center; align-items: center; overflow: hidden; }
-      #controlPanel { position: absolute; top: 10px; right: 10px; background-color: rgba(0, 0, 0, 0.85); padding: 8px 15px; border-radius: 5px; }
+      #controlPanel { position: absolute; top: 10px; right: 10px; z-index: 100; background-color: rgba(0, 0, 0, 0.85); padding: 8px 15px; border-radius: 5px; }
       #musicButton { cursor: pointer; display: flex; align-items: center; justify-content: center; background-color: white; border-radius: 200px; padding: 10px; width: 15px; height: 15px; }
       .musicIcon { pointer-events: none; }
     </style>
