--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
     <style>
       body { margin: 0; display: flex; display: flex; justify-content: center; align-items: center; min-height: 100vh; background-color: black; }
       #renderView { position: relative; margin: 0 auto; width: 690px; height: 690px; border: 3px solid rgba(41,61,174, .5); border-radius: 5px; display: flex; justify-content: center; align-items: center; overflow: hidden; }
-      #controlPanel { position: absolute; top: 10px; right: 10px; display: flex; align-items: center; background-color: rgba(0, 0, 0, 0.85); padding: 8px 15px; border-radius: 5px; }
+      #controlPanel { position: absolute; top: 10px; right: 10px; z-index: 100; background-color: rgba(0, 0, 0, 0.85); padding: 8px 15px; border-radius: 5px; }
       #musicButton { cursor: pointer; display: flex; align-items: center; justify-content: center; background-color: white; border-radius: 200px; padding: 10px; width: 15px; height: 15px; }
-      #musicVolume { margin-left: 15px }
       .musicIcon { pointer-events: none; }
-      .slider { -webkit-appearance: none; width: 100%; height: 12px; background: white; outline: none; opacity: 0.7; -webkit-transition: .2s; transition: opacity .2s; }
-      .slider:hover { opacity: 1; }
-      .slider::-webkit-slider-thumb { -webkit-appearance: none; appearance: none; width: 15px; height: 25px; background: #323232; border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.5); cursor: pointer; }
-      .slider::-moz-range-thumb { width: 15px; height: 25px; background: #323232; border-radius: 5px; border: 1px solid rgba(255, 255, 255, 0.5); cursor: pointer; }
     </style>
 </head>
 <body>
@@ -23,7 +18,6 @@
       <a id="musicButton">
         <i class="musicIcon fa fa-pause" aria-hidden="true"></i>
       </a>
-      <input id="musicVolume" class="slider" type="range" min="1" max="100" value="30">
     </div>
   </div>
 <script type="text/javascript" src="app.js"></script></body>
